Fixed hw_4 change hr tag to border bottom 1px, section SKILLS change name of programs:set in one paragraph, add letter-spacing, font-weight 700

--- a/hw_4/style/index.css
+++ b/hw_4/style/index.css
@@ -15,6 +15,10 @@ main {
   flex-direction: column;
   align-items: center;
 }
+.header {
+  width: 970px;
+  border-bottom: 1px solid black;
+}
 header {
   width: auto;
   height: 80px;
@@ -41,11 +45,6 @@ a {
 .active_page {
   font-family: "Open Sans";
   color: #070707;
-}
-hr {
-  width: 970px;
-  height: 1px;
-  background-color: #828282;
 }
 .entry_content {
   display: flex;
@@ -166,7 +165,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 80px;
+  width: 90px;
   height: 143px;
 }
 
@@ -176,7 +175,10 @@ h2 {
 
 .program_list_item_caption {
   font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2%;
   color: #828282;
+  text-align: center;
 }
 .program_list_item_stars {
   display: flex;
@@ -234,7 +236,7 @@ h2 {
   border-radius: 22px;
   background-color: #070707;
 }
-.button:hover{
+.button:hover {
   cursor: pointer;
 }
 .social_list {
